# Django-Nginx-logs-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/apps/: tests.py  urls.py
src/apps/log_processor/: admin.py  api.py  apps.py  filters.py  models.py  serializers.py
src/apps/log_processor/management/commands/: process_log.py
src/apps/log_processor/migrations/: 0001_initial.py  0002_alter_nginxlogentry_date_and_more.py  0003_alter_nginxlogentry_date.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
