[tool.poetry]
name = "brandquad"
version = "0.1.0"
description = "Django log processing application"
authors = ["denis <funiusa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
drf-yasg = "^1.21.7"
pre-commit = "^3.7.0"
django-filter = "^24.2"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.6.0"
python-dotenv = "^1.0.1"
django-rest-swagger = "^2.2.0"
drf-spectacular = "^0.27.2"
orjson = "^3.10.1"
responses = "^0.25.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
